# StriviumSBAR

./: .gitignore  .mcp.json  README.md
.claude/mcp-servers/clickup/: README.md  SETUP_GUIDE.md  pyproject.toml  server.py
app-api-main/: .cursorrules  .dockerignore  .env.example  .env.production.example  .env.testing  .gitignore  Dockerfile  Dockerfile.local  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml
app-api-main/.github/workflows/: push-workflow.yml  tags-workflow.yml
app-api-main/alembic/: env.py
app-api-main/alembic/versions/: 12eeabdc9f11_create_tenants_table.py  1f08a0b4e0c3_create_hospitalization_actions_table.py  1f207733e80f_create_users_table.py  248c675bb053_create_patients_table.py  33e1b87b89d0_create_hospitalization_action_.py  3d2d8c5bb9f1_add_ai_audit_fields_to_hospitalization_action_sbars.py  41670f26fbfa_create_medical_team_users_table.py  5314882c1abc_create_role_permissions_table.py  5caaae3bcd98_increase_description_length_in_.py  6758fbfd97ec_add_member_type_in_tenant_users.py  7192598ff635_add_member_type_in_tenant_user_invites.py  7491d2e31caa_create_tenant_users_table.py  886b333e0fe1_create_medical_teams_table.py  9a26f231abad_create_tenant_user_invites_table.py  a1b2c3d4e5f6_create_refresh_tokens_table.py  a765384729ff_create_permissions_table.py  b1e7c4a9d6f2_create_hospitalization_action_sbars_table.py  c9b8d6f2a4e1_add_professional_fields_to_users.py  d4f1a2b3c5e7_create_audit_logs_table.py  ebba2271f598_create_hospitalizations_table.py  ed75292ba557_create_roles_table.py
app-api-main/app/: main.py  routes.py  seed.py
app-api-main/app/concerns/: base_model.py  upload.py
app-api-main/app/config/: filesystem.py
app-api-main/app/core/: database.py  environment.py  logging.py  rate_limiter.py
app-api-main/app/di/: concerns.py  filesystems.py  services.py
app-api-main/app/exceptions/: authentication_error.py  authorization_error.py  client_aware_error.py  handler.py  medical_team_not_found_error.py  tenant_not_found.py  user_not_found_error.py  validation_error.py
app-api-main/app/filesystem/: filesystem.py
app-api-main/app/middlewares/: audit_middleware.py  auth_middleware.py  security_headers.py  set_timezone.py  turnstile_middleware.py
app-api-main/app/models/: __init__.py  audit_log.py  hospitalization.py  hospitalization_action.py  hospitalization_action_attachment.py  hospitalization_action_sbar.py  medical_team.py  medical_team_user.py  patient.py  permission.py  refresh_token.py  role.py  role_permission.py  tenant.py  tenant_user.py  tenant_user_invite.py  user.py
app-api-main/app/scripts/: generate_hospitalization_actions.py  purge_audit_logs.py
app-api-main/app/seeders/: permission_seeder.py  role_permission_seeder.py  role_seeder.py
app-api-main/app/tests/: doctor.py  hospitalization.py  hospitalization_action.py  medical_team.py  (+7 more)
app-api-main/docs/: audit-logs.md  rate-limiting.md  security-audit.md  security-checklist.md
(+536 files in other folders)
