[project]
name = "python-modularized-monolith"
version = "0.1.0"
description = "Modularized monolith boilerplate"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "starlette (>=0.49.1,<0.50.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "fsspec (>=2025.7.0,<2026.0.0)",
    "fastapi-pagination (>=0.13.3,<0.14.0)",
    "boto3 (>=1.40.40,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "ecdsa (>=0.19.2,<0.20.0)",
    "mako (>=1.3.12,<2.0.0)",
    "pyasn1 (>=0.6.3,<0.7.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rsa (>=4.7,<5.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^9.0.3"
pytest-env = "^1.1.5"
faker = "^37.4.0"
pytest-cov = "^6.2.1"
pygments = "^2.20.0"
