[project]
name = "python-modularized-monolith"
version = "0.1.0"
description = "Modularized monolith boilerplate"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "fsspec (>=2025.7.0,<2026.0.0)",
    "fastapi-pagination (>=0.13.3,<0.14.0)",
    "boto3 (>=1.40.40,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^8.4.0"
pytest-env = "^1.1.5"
faker = "^37.4.0"
pytest-cov = "^6.2.1"

