[project]
name = "clickup-mcp-server"
version = "0.1.0"
description = "MCP server for ClickUp API integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
clickup-mcp = "server:main"
